--- a/DevicePortal.Api/appsettings.Development.json
+++ b/DevicePortal.Api/appsettings.Development.json
@@ -4,5 +4,8 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "ConnectionStrings": {
+    "DevicePortal": "Server=localhost,1433;Database=DevicePortal;User Id=sa;Password=Pa55w0rd;TrustServerCertificate=True;"
   }
 }
