Create base DB script to seed, clear and reseed

--- a/.gitignore
+++ b/.gitignore
@@ -79,6 +79,9 @@ artifacts/
 !.vscode/extensions.json
 *.code-workspace
 
+# Bruno
+bruno/*
+
 # ===================
 # Frontend (Node.js)
 # ===================
